Fixed issues with Likes API
