# api/like.api.go
@@ -11,51 +11,33 @@ import (
 
 // @Summary Show all likes
 // @Description Get all likes
-// @Tags likes
-// @Accept  json
-// @Produce  json
+// @Tags Likes
+// @Accept json
+// @Produce json
 // @Success 200 {array} database.Like
 // @Router /likes [get]
 func GetLikes(c *gin.Context) {
-	idStr := c.Query("id")
-	if idStr == "" {
-		var likes []database.Like
-		result := db.Find(&likes)
-		if result.Error != nil {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
-			return
-		}
-		c.JSON(http.StatusOK, likes)
-	} else {
-		id, err := strconv.Atoi(idStr)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-			return
-		}
-		var like database.Like
-		result := db.First(&like, id)
-		if result.Error != nil {
-			c.JSON(http.StatusNotFound, gin.H{"error": result.Error.Error()})
-			return
-		}
-		c.JSON(http.StatusOK, like)
+	var likes []database.Like
+	result := db.Find(&likes)
+	if result.Error != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
+		return
 	}
+	c.JSON(http.StatusOK, likes)
 }
 
 // @Summary Check if a user likes a refill station
 // @Description Check if a specific user likes a specific refill station
-// @Tags likes
-// @Accept  json
-// @Produce  json
-// @Param refillstationId query int true "Refill Station ID"
-// @Param userId query int true "User ID"
+// @Tags Likes
+// @Accept json
+// @Produce json
+// @Param refillstationId path int true "Refill Station ID"
+// @Param userId path int true "User ID"
 // @Success 200 {object} map[string]bool
-// @Failure 400 {object} map[string]string
-// @Failure 500 {object} map[string]string
-// @Router /refillstation_like [get]
+// @Router /likes/{refillstationId}/{usedId} [get]
 func GetLikeByUserIdAndStationID(c *gin.Context) {
-	refillstationIdStr := c.Query("refillstationId")
-	userIdStr := c.Query("userId")
+	refillstationIdStr := c.Param("refillstationId")
+	userIdStr := c.Param("userId")
 
 	if refillstationIdStr == "" || userIdStr == "" {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "refillstationId and userId are required"})
@@ -74,6 +56,20 @@ func GetLikeByUserIdAndStationID(c *gin.Context) {
 		return
 	}
 
+	// Check for if record exists
+	var tempStation database.RefillStation
+	if result := db.First(&tempStation, refillstationId); result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Refill Station with ID not found"})
+		return
+	}
+
+	// Check for if record exists
+	var tempUser database.User
+	if result := db.First(&tempUser, userId); result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User with ID not found"})
+		return
+	}
+
 	var like database.Like
 	result := db.Where("station_id = ? AND user_id = ?", refillstationId, userId).First(&like)
 	if result.Error != nil && result.Error != gorm.ErrRecordNotFound {
@@ -87,9 +83,9 @@ func GetLikeByUserIdAndStationID(c *gin.Context) {
 
 // @Summary Create a like
 // @Description Create a new like
-// @Tags likes
-// @Accept  json
-// @Produce  json
+// @Tags Likes
+// @Accept json
+// @Produce json
 // @Param like body database.Like true "Like"
 // @Success 201 {object} database.Like
 // @Router /likes [post]
@@ -109,36 +105,38 @@ func CreateLike(c *gin.Context) {
 
 // @Summary Update a like
 // @Description Update an existing like
-// @Tags likes
-// @Accept  json
-// @Produce  json
+// @Tags Likes
+// @Accept json
+// @Produce json
 // @Param like body database.Like true "Like"
 // @Success 200 {object} database.Like
 // @Router /likes [put]
 func UpdateLike(c *gin.Context) {
-	var like database.Like
-	if err := c.ShouldBindJSON(&like); err != nil {
+	var requestLike database.Like
+	if err := c.ShouldBindJSON(&requestLike); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	result := db.Save(&like)
-	if result.Error != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
+	var helpLike database.Like
+	if result := db.First(&helpLike, requestLike.ID); result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Like with ID not found"})
 		return
 	}
-	c.JSON(http.StatusOK, like)
+	db.Model(&helpLike).Updates(requestLike)
+
+	c.JSON(http.StatusOK, requestLike)
 }
 
 // @Summary Delete a like
 // @Description Delete an existing like
-// @Tags likes
-// @Accept  json
-// @Produce  json
-// @Param id query int true "Like ID"
+// @Tags Likes
+// @Accept json
+// @Produce json
+// @Param id path int true "Like ID"
 // @Success 204
-// @Router /likes [delete]
+// @Router /likes/{id} [delete]
 func DeleteLike(c *gin.Context) {
-	idStr := c.Query("id")
+	idStr := c.Param("id")
 	if idStr == "" {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "ID is required"})
 		return
@@ -148,10 +146,16 @@ func DeleteLike(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
 		return
 	}
+	var like database.Like
+	if result := db.First(&like, id); result.Error != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Like with ID not found"})
+		return
+	}
 	result := db.Delete(&database.Like{}, id)
 	if result.Error != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
 		return
 	}
+
 	c.Status(http.StatusNoContent)
 }
